--- a/package.json
+++ b/package.json
@@ -5,8 +5,23 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.19",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.4",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@chakra-ui/icons": "^2.1.1",
+        "@chakra-ui/react": "^2.8.2",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/react": "^1.2.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "framer-motion": "^11.2.10",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
