--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
+        "@headlessui/react": "^2.0.4",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^1.2.0",
         "@vitejs/plugin-react": "^4.3.1",
