--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "@headlessui/react": "^2.0.4",
+        "@heroicons/react": "^2.1.3",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^1.2.0",
         "@vitejs/plugin-react": "^4.3.1",
         "framer-motion": "^11.2.10",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.2.1",
+        "react-router-dom": "^6.23.1"
     }
 }
