--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@heroicons/react": "^2.1.3",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^1.2.0",
+        "@material-tailwind/react": "^2.1.9",
         "@vitejs/plugin-react": "^4.3.1",
         "framer-motion": "^11.2.10",
         "react": "^18.3.1",
